--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -264,6 +264,67 @@ blockquote {
 	width: 100%;
 	height: 100%;
 }
+#loadingContainer{
+	position: fixed;
+	min-height: 400px;
+	min-width: calc(100% - 450px);
+	top:0;
+	bottom:0;
+	left: 450px;
+	right:0;
+    z-index: 9;
+}
+#loading{
+	position: absolute;
+    width: 80px;
+    height: 80px;
+    top: 50%;
+    left: 50%;
+    margin-left: -40px;
+    margin-top: -40px;
+    text-align: center;
+    line-height: 80px;
+    font-size: 3rem;
+}
+@-webkit-keyframes rotating /* Safari and Chrome */ {
+  from {
+    -ms-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  to {
+    -ms-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@keyframes rotating {
+  from {
+    -ms-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  to {
+    -ms-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+#loading::before {
+  -webkit-animation: rotating 2s linear infinite;
+  -moz-animation: rotating 2s linear infinite;
+  -ms-animation: rotating 2s linear infinite;
+  -o-animation: rotating 2s linear infinite;
+  animation: rotating 2s linear infinite;
+}
 #column-annonces, #column-content{
 	-webkit-transition: width .5s ease-in-out;
 	-webkit-transition: margin-left .5s ease-in-out;
@@ -278,13 +339,8 @@ blockquote {
 	width: 100%;
 	max-width: 450px;
 }
-.elem{
-	background-color: #F5F3EF;
-    border-bottom: 1px solid #CAC7BF;
-    border-right: 1px solid #CAC7BF;
-    color: #7A7874;
-    position: relative;
-    margin-bottom: 20px;
+#column-annonces a:focus, #column-annonces a:hover{
+	text-decoration: none;
 }
 #column-content{
 	width: calc(100% - 450px);
@@ -303,8 +359,8 @@ blockquote {
 }
 #hide-menu{
 	position: absolute;
-	top: 25px;
-	right: 18px;
+	right: 15px;
+	width: 48px;
 }
 #show-menu{
 	position: absolute;
@@ -325,6 +381,7 @@ blockquote {
 	visibility: visible;
 	opacity: 1;
 }
+
 /* Headers */
 
 header {
@@ -594,12 +651,13 @@ a {
 /* Header
 -------------------------------------------------- */
 #admin{
-	width: 100%;
 	position: relative;
+	margin-top: 30px;
 }
 #admin>span{
-	padding: 15px 17px;
 	color: rgba(0,0,0,.5);
+	padding: 15px;
+	text-align: center;
 }
 #admin span a{
 	color: rgba(0,0,0,.5);
@@ -655,13 +713,9 @@ nav {
 	margin-top: -30px;
 }
 #signin {
-	margin: 1rem;
-	width: 10rem;
 }
 .signin{
 	font-size: 1rem;
-	right: 15px;
-	top: 12px;
 	color: rgba(255,0,0,.6);
 }
 
@@ -794,9 +848,6 @@ nav {
 /* Annonces
 -------------------------------------------------- */
 
-#liste-annonces .elem{
-	cursor: pointer;
-}
 #liste-annonces .container-fluid {
 	padding: 40px 25px 10px;
 }
@@ -804,18 +855,35 @@ nav {
 }
 #liste-annonces .row img {
 }
-#liste-annonces .annonce-mini {
-	border-right: 0px;
-	-webkit-transition: border .1s ease-in-out;
-	-moz-transition: border .1s ease-in-out;
-	transition: border .1s ease-in-out;
+#liste-annonces .annonce-mini{
+	background-color: #F5F3EF;
+    border-bottom: 1px solid #CAC7BF;
+    border-right: 1px solid #CAC7BF;
+    color: #7A7874;
+    position: relative;
+    margin-bottom: 20px;
+    cursor: pointer;
 }
-#liste-annonces .annonce-mini:hover {
-	border-right: 13px solid rgb(255,185,185);
+#liste-annonces .annonce-mini .barreActive{
+	-webkit-transition: width .1s ease-in-out;
+	-moz-transition: width .1s ease-in-out;
+	transition: width .1s ease-in-out;	
+	background-color: rgb(255,185,185);
+	position: absolute;
+	width: 0;
+	top:0;
+	bottom:0;
+	right: 0;
 }
-#liste-annonces .annonce-mini.active {
-	border-right: 13px solid rgb(255,107,107);
+#liste-annonces .annonce-mini:hover .barreActive, #liste-annonces .annonce-mini.active .barreActive{
+	width: 9px !important;
+}
+#liste-annonces .annonce-mini.active .barreActive{
+	background-color: rgb(255,107,107);
+}
+#liste-annonces .annonce-mini.active{
 	background: #FBFBFB;
+	color: #444;
 }
 .label-mini{
 	float: left;
@@ -947,7 +1015,20 @@ nav {
 #content-titraille {
 	margin: 2.3rem 0;
 }
-
+#content{
+    opacity: 1;
+    -ms-filter: "prodig:DXImageTransform.Microsoft.Alpha(Opacity=100)"; /* Hack IE8 */
+    filter: alpha(opacity = 100); /* Hack IE 5-7 */
+    -webkit-transition: opacity 0.1s ease-in-out;
+    -moz-transition: opacity 0.1s ease-in-out;
+    -o-transition: opacity 0.1s ease-in-out;
+    transition: opacity 0.1s ease-in-out;
+}
+#content.loading{
+    opacity: 0.25;
+    -ms-filter:"prodig:DXImageTransform.Microsoft.Alpha(Opacity=25)"; /* Hack IE 8 */
+    filter: alpha(opacity = 25); /* Hack IE 5-7 */
+}
 /* Viewer */
 #viewer {
 	position: relative;
@@ -1332,7 +1413,7 @@ figure.swiper-slide{
 	min-height: auto;
 	width: 40px !important;
 	height: 22px !important;
-	border-radius: 50%;
+	border-radius: 11px;
     border-color: rgba(0,0,0,.65);
 }
 .toggle.btn.rounded-button .toggle-group{
