--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -563,6 +563,7 @@ button.btn.glyphicon{
 	box-shadow: none !important;
 }
 .pac-container{z-index:2000 !important;}
+
 .btn {
 	border-radius: 0;
 }
@@ -1106,13 +1107,13 @@ nav {
 	color:#fff;
 	opacity:.75;
 }
-#btn-new {
+#btn-new, .btn-big {
     width: 100%;
     background-color: rgb(77, 250, 137);
-    border-bottom: 1px solid #CAC7BF;
-    border-right: 1px solid #CAC7BF;
+    border-bottom: 1px solid #CAC7BF !important;
+    border-right: 1px solid #CAC7BF !important;
 }
-#btn-new:hover {
+#btn-new:hover, .btn-big:hover {
 	background-color: rgb(255,107,107);
 	color: #fff;
 }
@@ -1706,16 +1707,21 @@ figure.swiper-slide{
 -------------------------------------------------- */
 #account-iframe {
 	width: 100%;
-	height: 1300px;
+	height: 100%;
 	margin-top: -48px;
 	display: block;
 }
 #account-iframe-wrapper {
 	max-width: 770px;
 	width: 100%;
-	display: inline-block;
+	height: 1300px;
+	margin: auto;
 	overflow: hidden;
-	border: 1px solid;
+	position: relative;
+	z-index: 1;
+}
+#btn-my-account {
+	margin-top: 30px;
 }
 
 /* Footer
