--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -176,7 +176,6 @@ main{
 article{
 	background: #FFF;
 	padding: 3rem 2rem;
-	margin-bottom: 5rem;
 }
 body, #megabloc{
 	overflow: hidden;
@@ -1660,57 +1659,99 @@ nav {
     left: 24px;
 }
 #comments-container{
-	padding: 3rem 2rem;
-	margin: -5rem auto 5rem auto;
+	padding: 2rem 2rem;
+	margin: 0;
 	position: relative;
 	min-width: 300px;
-	max-width: 900px;
+	width: 66.6%;
 }
 .add-comment-form textarea {
 	width: 100%;
-	max-width: 450px !important;
-	border: 1px solid #666;
-	height: 10rem;
-	margin: 0 0 1rem 0;
-	padding: .3rem .5rem;
+	height: 5rem;
+	color: rgb(0, 0, 0);
+	font-size: 1.25rem;
+	margin: 1rem 0px 1rem;
+	padding: 0;
 }
 .add-comment-form .input-group .form-control{
-	border: 1px solid;
+	color: rgb(187, 187, 187);
+	padding: 0;
+	font-size: 1rem;
 }
 .add-comment-form input.submit.btn.btn-success{
 	margin-top: -7px;
 }
 .add-comment-form .comment-field-name, .add-comment-form .comment-field-mail {
-	margin-bottom: -1px;
-}
-.add-comment-form .comment-field-name>span, .add-comment-form .comment-field-mail>span {
-	min-width: 55px;
-	border-radius: 0px;
-}
-.add-comment-form .comment-field-name {
+	color: rgb(227, 227, 227);
+	border-bottom: 1px dashed;
 	float: left;
 }
+.add-comment-form .comment-field-name>span, .add-comment-form .comment-field-mail>span {
+	display: none;
+}
+.add-comment-form .comment-field-name {
+	width: 45%;
+	margin-right: 10%;
+}
 .add-comment-form .comment-field-mail {
+	width: 45%;
+}
+.comment {
+	margin-bottom: 1rem;
 }
 .comment-text{
-	display: table;
+	position: relative;
 	background: #fff;
 	padding: 11px 15px 2px 15px;
-	margin: 0 0 1rem 0;
+	margin-bottom: .5rem;
 	border-radius: 10px;
-	min-width: 350px;
-	max-width: 450px;
+	min-width: 35px;
+	display: inline-block;
+}
+.comment-text:after {
+	right: 100%;
+	top: 50%;
+	border: solid transparent;
+	content: " ";
+	height: 0;
+	width: 0;
+	position: absolute;
+	pointer-events: none;
+	border-color: rgba(255, 255, 255, 0);
+	border-right-color: #FFFFFF;
+	border-width: 7px;
+	margin-top: -7px;
 }
 .comment-meta{
 	font-size: 1rem;
-	margin-left: 15px;
 }
 #addComment{
-	max-width: 450px;
+	background: rgb(255, 255, 255) none repeat scroll 0% 0%;
+	border-radius: 10px;
+	padding: 1rem;
+}
+#envoyerCommentaire {
+	text-align: right;
 }
 .input-group-addon{
 	border-color: #666;
 }
+
+input::-webkit-input-placeholder, textarea::-webkit-input-placeholder { 
+    color:    #BBB !important;
+}
+input:-moz-placeholder, textarea:-moz-placeholder { 
+    color:    #BBB !important;
+}
+input::-moz-placeholder, textarea::-moz-placeholder { 
+    color:    #BBB !important;
+}
+input:-ms-input-placeholder, textarea:-ms-input-placeholder { 
+    color:    #BBB !important;
+}
+
+
+
 /* Buttons
 -------------------------------------------------- */
 .toolbox {
