--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -287,13 +287,13 @@ header#navbar h4{
 }
 #cover{
 	height: 100vh;
+	padding-top: 42px;
 	background: #93CDFF;
 	overflow: hidden;
 	margin-top: -40px;
 	margin-bottom: 5rem;
-}
-#cover.out{
-	height: 0vh;
+    background-size: cover !important;
+    background-position: center center !important;
 }
 .accueil #column-content{
 	width: 100%;
@@ -509,12 +509,19 @@ header#navbar h4{
 -------------------------------------------------- */
 
 
-#textaccueil {
-    background: #fff;
+#textAccueil {
+    background: #FDFFE4;
+    color: #444;
     padding: 15px;
     margin-bottom: 20px;
     overflow-y: auto;
     box-shadow: 0 0 15px rgba(0,0,0,.5);
+    max-width: 380px;
+    width: 100%;
+    min-height: 400px;
+    max-height: 75vh;
+    position: absolute;
+    margin: 5vh 45px;
 }
 #column-gauche.accueil{
 	width: 450px;
@@ -1080,13 +1087,13 @@ header#navbar .right ul.dropdown-menu{
 
 }
 @media screen and (max-width: 1000px ) {
-	#column-gauche, #column-content{
+	#megabloc:not(.accueil) #column-gauche, #column-content{
 		width: 50%;
 	}
-	#megabloc{
+	#megabloc:not(.accueil){
 		width: 200%;
 	}
-	#megabloc.showContent{
+	#megabloc:not(.accueil).showContent{
 		left:-100%;
 	}
 	#hide-menu{
@@ -1124,9 +1131,19 @@ header#navbar .right ul.dropdown-menu{
     cursor: pointer;
     max-width: 380px;
     display: block;
+    text-decoration: none;
 }
 #btn-new, .annonce-mini, article{
 	box-shadow: 0px 1px 1px rgba(0,0,0,.25);
+}
+.accueil #content>h2{
+	text-align: center;
+	font-size: 2rem;
+	color: #444;
+	border-bottom: 1px solid;
+	margin: auto;
+	margin-bottom: 4rem;
+	display: table;
 }
 .accueil .annonce-mini{
 	width: 380px;
