--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1748,6 +1748,9 @@ header#navbar .right ul.dropdown-menu{
 	min-width: 300px;
 	width: 66.6%;
 }
+#comments-container label {
+	font-weight: normal;
+}
 .add-comment-form textarea {
 	max-width: 100%;
 	height: 5rem;
@@ -1869,7 +1872,7 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
     border-radius: 50%;
     width: 22px;
     height: 22px;
-    margin-top: -2px;
+    margin-top: -3px;
     padding: 0;
     border: 1px solid transparent;
     border-color: #888;
